# 221-329_Ivanova

./: credentials.json  credentials_en.json  credentialwidget.h  credentialwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/: CMakeLists.txt  credentials_en.json  credentialwidget.cpp  credentialwidget.ui  mainwindow.cpp  mainwindow.ui
